--- a/.gitignore
+++ b/.gitignore
@@ -48,7 +48,7 @@ CLAUDE.md
 
 public/movie_pic/
 
-data/scripts/.venv/
-
-data/parental_guides/
-data/*.tar.gz
+# scraping data
+scripts/scraping/parental_guides/
+scripts/scraping/*.tar.gz
+scripts/scraping/translate_scripts/.venv/
