--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-fast-marquee": "^1.6.5",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
